# jan-cowork-sandbox-demo

./: .gitignore  Package.swift  README.md  build.sh  customize-rootfs.sh  demo.md  demo.mjs  get-base-image.sh  rpc-client.mjs  sign.sh
Sources/: JanworkVMManager.swift  NAPIHelpers.swift  NAPIModule.swift  module.modulemap  napi_bridge.h
daemon/: Cargo.toml  build-image.sh  srt-settings.json
daemon/src/: main.rs  network.rs  process.rs  rpc.rs
js/: index.js
